# Vuoden-Harmain-Sovellus

./: ..pylintrc.swp  .coverage  .env.test  .gitignore  .pylintrc  LICENSE.md  README.md  client.js  fly.toml  pyproject.toml  schema.sql  sprintbacklog.md
.github/workflows/: main.yml
src/: .env.test  AppLibrary.py  actions.py  bibtex_creator.py  citations.py  routes.py  tags.py
src/static/: main.css
src/templates/: bibfile.html  frontpage.html  layout.html  modify_citation.html  tag_citations.html
src/tests/: bibtex_creator.robot  citations.robot  resource.robot  users.robot
